# scgt

./: .gitignore  DEVELOP.md  Documentation.md  LICENSE.md  README.md  build_wheel.sh  pyproject.toml  requirements.txt  test_iterator.py  test_scgt.py  tests.py
scgt/: __init__.py  scgt.py
test_files/: test_Psilopogon_rafflesii_300.tfw  test_Psilopogon_rafflesii_300.tif  test_Psilopogon_rafflesii_300.tif.aux.xml  test_Psilopogon_rafflesii_300.tif.ovr  test_Psilopogon_rafflesii_300.tif.vat.dbf  test_Psilopogon_rafflesii_300.tif.xml
