[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scgt"
version = "0.0.8"
authors = [
        {name="Jasmine Tai", email="jctai@ucsc.edu"},
        {name="Natalie Valett", email="nvalett@ucsc.edu"},
        {name="Luca de Alfaro", email="luca@dealfaro.com"}]
description = "UC Santa Cruz Geographical Toolkit"
readme = "README.md"
requires-python = ">=3.7"
license = {file="LICENSE.md"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["scgt"]

[project.urls]
"Homepage" = "https://github.com/ecoscape-earth/scgt"
"Bug Tracker" = "https://github.com/ecoscape-earth/scgt/issues"


